@startuml
skinparam classAttributeIconSize 0

class Hotel {
  +Guid Id
  +string Name
  +string Description
  +decimal Rating
  +List<RoomType> RoomTypes
  +List<Amenity> Amenities
}

class RoomType {
  +Guid Id
  +string Name
  +int MaxOccupancy
  +decimal BasePrice
  +bool IsAvailable(Date start, Date end)
}

class Reservation {
  +Guid Id
  +Guid UserId
  +Guid HotelId
  +Guid RoomTypeId
  +Date CheckIn
  +Date CheckOut
  +int Guests
  +decimal TotalAmount
  +StatusEnum Status
  +void Cancel()
}

class Payment {
  +Guid Id
  +Guid ReservationId
  +decimal Amount
  +string Status
  +void Capture()
}

class HotelService {
  +IEnumerable<Hotel> GetHotels(SearchCriteria c)
  +Hotel GetById(Guid id)
  +void Create(Hotel h)
}

class ReservationService {
  +Reservation CreateReservation(ReservationRequest req)
  +bool CheckAvailability(Guid roomTypeId, Date start, Date end)
  +void CancelReservation(Guid reservationId)
}

Hotel "1" -- "*" RoomType
Reservation --> RoomType
Reservation --> Hotel
Reservation --> User
Reservation "1" -- "0..*" Payment
HotelService ..> Hotel
ReservationService ..> Reservation
@enduml
